# open-project-manager-mcp

./: .gitignore  .mcp.json  CHARTER.md  DEPLOY.md  README.md  STARTUP.md  pyproject.toml  test.db-wal
.github/agents/: dom.agent.md  ralph.agent.md  scribe.agent.md  squad.agent.md
.github/workflows/: security.yml
.squad/: answer_opm_questions.py  ceremonies.md  decisions.md  routing.md  team.md
.squad/casting/: policy.json  registry.json
.squad/log/: 2026-04-02-p1-lock-fix.md  2026-04-02T13-46-52Z-messaging-implementation.md  2026-04-02T23-40-31Z-opm-fix-deployed.md  2026-04-03T03-31-51Z-p0-event-loop-fix.md  2026-04-06T22-10-45Z-auth-hang-fix.md  2026-04-07T03-56-56Z-mcp-400-fix.md  20260402T031500Z-mcp-config-agents.md  20260402T204015Z-opm-wiki.md  20260402T205710Z-session-reaper-fix.md
.squad/orchestration-log/: 2026-04-02-lock-fix.md  2026-04-02T08-55-30Z-angela-docs.md  2026-04-02T13-28-36Z-mobley-sks.md  2026-04-02T13-46-52Z-messaging-impl.md  2026-04-02T15-39-22Z-angela-deploy-remote.md  2026-04-02T23-40-31Z-deployment-opm-fix.md  2026-04-03T03-31-51Z-darlene-async-sqlite-fix.md  2026-04-04T210000Z-scribe-auth-fix.md  2026-04-06T22-10-45Z-darlene-auth-hang-fix.md  2026-04-06T22-10-45Z-dom-auth-security-review.md  2026-04-07T03-56-56Z-darlene-mcp-400-fix.md  20260331T223819Z-review-round.md  20260331T224608Z-deploy.md  session-log.md  (+3 more)
tests/: test_config.py  test_lock_fix.py  test_messaging.py  test_middleware.py  test_permissions.py  test_reg_trimmed.tmp  test_registration.py  test_session_reaper.py  test_telemetry.py  test_tools.py  test_v2.py
(+93 files in other folders)
